-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0 Beta 1
-
None
-
OS X 10.8, Qt 5.1.0
-
119882714f87ffeb6945fdb2d02997ae125ff50c
When i try to add same QMenu object to a 2 different QMenuBar objects, i get NSException throwing which says "Item to be inserted into menu already is in another menu". This leads to application crash.
It seems to be a regression from Qt4.
This happens because each QCocoaMenu stores associated NSMenuItem, which can be added only to one NSMenu object. It seems, that menu should store multiple NSMenuItems, one for each menu bar, which menu is added to.
Or, if adding same QMenu to different menu bars is no longer supported, that should be properly documented and should not lead to crash.
- resulted in
-
QTBUG-53085 Reg[5.6.0-5.6.1] "Start Dictation..." and "Emoji & Symbols" are missing in Edit menu in Application
-
- Closed
-
| For Gerrit Dashboard: QTBUG-31342 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 149727,5 | QCocoaMenu: Decouple NSMenuItem from NSMenu | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |