src/plugins/platforms/cocoa/qcocoamenu.mm
@@ -215,7 +215,8 @@ QT_BEGIN_NAMESPACE
 
 QCocoaMenu::QCocoaMenu() :
     m_enabled(true),
-    m_tag(0)
+    m_tag(0),
+    m_menuBar(0)
 {
     m_delegate = [[QT_MANGLE_NAMESPACE(QCocoaMenuDelegate) alloc] initWithMenu:this];
     m_nativeItem = [[NSMenuItem alloc] initWithTitle:@"" action:nil keyEquivalent:@""];
@@ -532,6 +533,16 @@ void QCocoaMenu::syncModalState(bool modal)
 
         item->syncModalState(modal);
     }
+}
+
+void QCocoaMenu::setMenuBar(QCocoaMenuBar *menuBar)
+{
+    m_menuBar = menuBar;
+}
+
+QCocoaMenuBar *QCocoaMenu::menuBar() const
+{
+    return m_menuBar;
 }
 
 QT_END_NAMESPACE
